--- a/Sets and Functions: Dinosaurs.ipynb
+++ b/Sets and Functions: Dinosaurs.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Project 1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMAnz/mwb8rBC2iMBlK4Bs+",
+      "authorship_tag": "ABX9TyOsqbmMYd1YciAVScL0+ngt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -75,7 +75,7 @@
         "     'T-Rex', 'Therizinosaurus', 'Titanosaurus', 'Triceratops', 'Troodon', 'Velociraptor', \n",
         "     'Yutyrannus']"
       ],
-      "execution_count": 119,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -94,7 +94,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SpWaqTjMe6ox",
-        "outputId": "c32b29d0-77e4-4ae3-a8cd-713127c2ea5e"
+        "outputId": "e4186ab9-c489-4578-b5ed-b6abfb0c93a9"
       },
       "source": [
         "AUB = []\n",
@@ -104,7 +104,7 @@
         "  AUB.append(dinosaur)\n",
         "set(AUB)"
       ],
-      "execution_count": 120,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -124,7 +124,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 120
+          "execution_count": 25
         }
       ]
     },
@@ -135,7 +135,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "sN8y4OO6gd4u",
-        "outputId": "11dec973-841a-48ce-e081-ef45106f6288"
+        "outputId": "43b84e0c-c424-4ae8-f44d-27513d5d1dba"
       },
       "source": [
         "AUC = []\n",
@@ -145,7 +145,7 @@
         "  AUC.append(dinosaur)\n",
         "set(AUC)"
       ],
-      "execution_count": 121,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -165,7 +165,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 121
+          "execution_count": 26
         }
       ]
     },
@@ -176,7 +176,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Pubjxry0gsuM",
-        "outputId": "c4c9c582-9f58-4d48-8d69-d7a680a52eea"
+        "outputId": "1edc4e68-f47b-454f-9979-ced4bbd76fce"
       },
       "source": [
         "BUC = []\n",
@@ -186,7 +186,7 @@
         "  BUC.append(dinosaur)\n",
         "set(BUC)"
       ],
-      "execution_count": 122,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -206,7 +206,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 122
+          "execution_count": 27
         }
       ]
     },
@@ -226,7 +226,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "kizyVUrbhEln",
-        "outputId": "1230ab16-9f1d-492b-dc06-00e1de33994a"
+        "outputId": "4491f28e-64aa-4659-d5c0-e2fa9dc29d45"
       },
       "source": [
         "ACapB = []\n",
@@ -235,7 +235,7 @@
         "    ACapB.append(dinosaur)\n",
         "ACapB"
       ],
-      "execution_count": 123,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -245,7 +245,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 123
+          "execution_count": 28
         }
       ]
     },
@@ -256,7 +256,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xbm3BX-slfAs",
-        "outputId": "3182a20f-d4a5-4e34-c2fc-18cfaed93f9a"
+        "outputId": "08787580-c9cb-4bac-bc4f-970727907ec1"
       },
       "source": [
         "ACapC = []\n",
@@ -265,7 +265,7 @@
         "    ACapC.append(dinosaur)\n",
         "ACapC"
       ],
-      "execution_count": 124,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -275,7 +275,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 124
+          "execution_count": 29
         }
       ]
     },
@@ -286,7 +286,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OBXPseWJlf_8",
-        "outputId": "eb73e0cc-9b18-4b5b-ae88-927832b15f44"
+        "outputId": "2ed65a42-201f-4cd2-f364-b490b288ea55"
       },
       "source": [
         "BCapC = []\n",
@@ -295,7 +295,7 @@
         "    BCapC.append(dinosaur)\n",
         "BCapC"
       ],
-      "execution_count": 125,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -305,7 +305,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 125
+          "execution_count": 30
         }
       ]
     },
@@ -325,7 +325,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "dWABQgAWl-xq",
-        "outputId": "a307ec37-5f1c-4521-aaaf-ad1b432f1ed5"
+        "outputId": "5bebdc7c-5823-4e19-bf4c-cdcd04892671"
       },
       "source": [
         "AComplement = []\n",
@@ -334,7 +334,7 @@
         "    AComplement.append(dinosaur)\n",
         "AComplement"
       ],
-      "execution_count": 126,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -362,7 +362,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 126
+          "execution_count": 31
         }
       ]
     },
@@ -373,7 +373,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Ilh6bBeWmbRO",
-        "outputId": "846e1c17-e1e0-4b5d-e6ce-218b28f1d44f"
+        "outputId": "ca87e15c-47c6-446d-9d3c-7fdc6f41981b"
       },
       "source": [
         "BComplement = []\n",
@@ -382,7 +382,7 @@
         "    BComplement.append(dinosaur)\n",
         "BComplement"
       ],
-      "execution_count": 127,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -410,7 +410,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 127
+          "execution_count": 32
         }
       ]
     },
@@ -421,7 +421,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "O9-N2ajcmblx",
-        "outputId": "c4a4fcda-7a93-401a-fbb5-588a7c2a96c1"
+        "outputId": "16cc71a8-7222-4ec8-feda-ae17bf845c77"
       },
       "source": [
         "CComplement = []\n",
@@ -430,7 +430,7 @@
         "    CComplement.append(dinosaur)\n",
         "CComplement"
       ],
-      "execution_count": 128,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -458,7 +458,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 128
+          "execution_count": 33
         }
       ]
     },
@@ -487,7 +487,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "y4nHwUydobK-",
-        "outputId": "05bc7203-7437-480a-b558-490e1e0524f9"
+        "outputId": "ca7b3581-0742-4834-fd92-16576d8ea29e"
       },
       "source": [
         "def DPpowerset(s):\n",
@@ -499,7 +499,7 @@
         "\n",
         "DPpowerset(A)"
       ],
-      "execution_count": 129,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -577,7 +577,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 129
+          "execution_count": 34
         }
       ]
     },
@@ -623,7 +623,7 @@
         "def fun(x):\n",
         "  return ((x/math.pi)*(math.sqrt(2*math.pi))/(np.e))"
       ],
-      "execution_count": 130,
+      "execution_count": 35,
       "outputs": []
     },
     {
@@ -642,12 +642,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "38abfb5b-1869-4279-8ad1-c8e856ce963d"
+        "outputId": "ce9c5a4a-1475-4c44-e434-469843a75b76"
       },
       "source": [
         "fun(0)"
       ],
-      "execution_count": 131,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -657,7 +657,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 131
+          "execution_count": 36
         }
       ]
     },
@@ -668,12 +668,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c4a94e41-d0b5-4c36-e6f8-76e0b2e02828"
+        "outputId": "2d4fc01d-27f3-4dcf-e22c-bc6d6d32a99d"
       },
       "source": [
         "fun(5)"
       ],
-      "execution_count": 132,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -683,7 +683,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 132
+          "execution_count": 37
         }
       ]
     },
@@ -694,12 +694,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a0b45ac1-6479-4111-e639-48bc7c831a9a"
+        "outputId": "4ddfa495-cfeb-4ea4-c6ba-d52c02786555"
       },
       "source": [
         "fun(10)"
       ],
-      "execution_count": 133,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -709,7 +709,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 133
+          "execution_count": 38
         }
       ]
     },
@@ -723,7 +723,7 @@
         "\n",
         "It is One-to-One.\n",
         "\n",
-        "It is Unto.\n",
+        "It is Onto.\n",
         "\n",
         "It is Bijective"
       ]
@@ -749,7 +749,7 @@
         "def infun(x):\n",
         "  return (np.e*math.sqrt(math.pi/2)*x)"
       ],
-      "execution_count": 134,
+      "execution_count": 39,
       "outputs": []
     },
     {
@@ -768,12 +768,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "471f586e-34cc-49c5-8822-d3b75214cb45"
+        "outputId": "f0ae259f-43a2-4081-adf6-e59144b6a59d"
       },
       "source": [
         "infun(0)"
       ],
-      "execution_count": 135,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -783,7 +783,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 135
+          "execution_count": 40
         }
       ]
     },
@@ -794,12 +794,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ed3ab41a-2a41-4a02-ba7e-9f55fd65d320"
+        "outputId": "c8469725-7c2b-4322-d4ca-58c162e91c70"
       },
       "source": [
         "infun(2.2507907903927658)"
       ],
-      "execution_count": 136,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -809,7 +809,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 136
+          "execution_count": 41
         }
       ]
     },
@@ -820,12 +820,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "dcc690bb-8e61-479e-930a-6e979853d527"
+        "outputId": "0ae5e53c-41b7-41c2-bf17-cf9eae6d4bae"
       },
       "source": [
         "infun(4.5015815807855315)"
       ],
-      "execution_count": 137,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -835,7 +835,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 137
+          "execution_count": 42
         }
       ]
     },
@@ -856,7 +856,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 0
         },
-        "outputId": "a0c3f740-d4bf-436a-c863-d9632122b30c"
+        "outputId": "a2790f80-259a-4822-d04d-d50b0c2c4b99"
       },
       "source": [
         "import matplotlib.pyplot as plt\n",
@@ -870,17 +870,17 @@
         "plt.plot(x,infun(x))\n",
         "plt.plot(x,x)"
       ],
-      "execution_count": 138,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[<matplotlib.lines.Line2D at 0x7efcc08d2dd0>]"
+              "[<matplotlib.lines.Line2D at 0x7f5b03465e10>]"
             ]
           },
           "metadata": {},
-          "execution_count": 138
+          "execution_count": 43
         },
         {
           "output_type": "display_data",
@@ -911,7 +911,113 @@
         "id": "71r5QW9uBDw9"
       },
       "source": [
-        ""
+        "(a) I have created a dictionary between set A and B from the first section."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "TFfFBzwV5p0w",
+        "outputId": "b8fbf275-2fad-4ea1-e307-738bb7e096ae",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "dictionary = dict({a:b for a,b in zip(A, B)})\n",
+        "dictionary"
+      ],
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'Allosaurus': 'Spinosaurus',\n",
+              " 'T-Rex': 'Stegosaurus',\n",
+              " 'Therizinosaurus': 'Stygimoloch',\n",
+              " 'Titanosaurus': 'Styracosuarus',\n",
+              " 'Triceratops': 'Suchomimus',\n",
+              " 'Troodon': 'T-Rex'}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 44
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "LxqsyRSo6LFf"
+      },
+      "source": [
+        "(b) This dictionary is a function. This function is one-to-one but not onto so it is not bijective.\n",
+        "\n",
+        "(c) The relation is not symmetric since the allo goes to the spino but not back. It is not reflexive since rex does not go to rex. It is transitive."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "DJO8jBLO8psj"
+      },
+      "source": [
+        "(d)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "AD1TylHx75F0",
+        "outputId": "25b40a10-840f-469d-e5b4-c1e9dd3062a8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "dictionary2 = dict({a:b for a,b in zip(dictionary, C)})\n",
+        "dictionary2"
+      ],
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'Allosaurus': 'Acrocanthosaurus',\n",
+              " 'T-Rex': 'Allosaurus',\n",
+              " 'Therizinosaurus': 'Ankylosaurus',\n",
+              " 'Titanosaurus': 'Apatosaurus',\n",
+              " 'Triceratops': 'Archaeopteryx',\n",
+              " 'Troodon': 'Stegosaurus'}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 45
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "AlRAqPCL8zho"
+      },
+      "source": [
+        "# 4 Comments"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "zZBvRl7s86zT"
+      },
+      "source": [
+        "(a) I found that the longer I worked on this project the easier it got. I also found that there are many different ways to do the same thing.\n",
+        "\n",
+        "(b) N/A\n",
+        "\n",
+        "(c) I didn't get an inverse problem through code, instead I hard coded it into the code.The graph of my function took a while to get working. I found it easier to change my function to get the graph to work the best. I plotted them using the plot library from 0 to 10 on both axis"
       ]
     }
   ]
