--- a/Logic_and_Proofs.ipynb
+++ b/Logic_and_Proofs.ipynb
@@ -569,7 +569,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "This completes the proof shoing that (0,5) is the y-intercept of the equation y=2x+5."
+        "This completes the proof showing that (0,5) is the y-intercept of the equation y=2x+5."
       ],
       "metadata": {
         "id": "WE0deSLd-p9-"
